site_management - fix dialog size (double scroll bar) when using filter

--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -104,7 +104,7 @@ th:nth-child(n+2), td:nth-child(n+2) {
 
 .table-dialog-list {
   overflow: auto;
-  min-height: 50vh;
+  min-height: 40vh;
   min-width: 50vw;
   width: 50vh;
   height: calc(100vh - (0.7 * 100vh));
